@@ -35,16 +35,16 @@
 
 /**
  * Return maximum data code length (bytes) for the version.
- * @param version
- * @param level
+ * @param version version of the symbol
+ * @param level error correction level
  * @return maximum size (bytes)
  */
 extern int QRspec_getDataLength(int version, QRecLevel level);
 
 /**
  * Return maximum error correction code length (bytes) for the version.
- * @param version
- * @param level
+ * @param version version of the symbol
+ * @param level error correction level
  * @return ECC size (bytes)
  */
 extern int QRspec_getECCLength(int version, QRecLevel level);
@@ -52,21 +52,21 @@ extern int QRspec_getECCLength(int version, QRecLevel level);
 /**
  * Return a version number that satisfies the input code length.
  * @param size input code length (byte)
- * @param level
+ * @param level error correction level
  * @return version number
  */
 extern int QRspec_getMinimumVersion(int size, QRecLevel level);
 
 /**
  * Return the width of the symbol for the version.
- * @param version
- * @return width
+ * @param version vesion of the symbol
+ * @return width of the symbol
  */
 extern int QRspec_getWidth(int version);
 
 /**
  * Return the numer of remainder bits.
- * @param version
+ * @param version vesion of the symbol
  * @return number of remainder bits
  */
 extern int QRspec_getRemainder(int version);
@@ -77,16 +77,16 @@ extern int QRspec_getRemainder(int version);
 
 /**
  * Return the size of lenght indicator for the mode and version.
- * @param mode
- * @param version
+ * @param mode encode mode
+ * @param version vesion of the symbol
  * @return the size of the appropriate length indicator (bits).
  */
 extern int QRspec_lengthIndicator(QRencodeMode mode, int version);
 
 /**
  * Return the maximum length for the mode and version.
- * @param mode
- * @param version
+ * @param mode encode mode
+ * @param version vesion of the symbol
  * @return the maximum length (bytes)
  */
 extern int QRspec_maximumWords(QRencodeMode mode, int version);
@@ -97,8 +97,8 @@ extern int QRspec_maximumWords(QRencodeMode mode, int version);
 
 /**
  * Return an array of ECC specification.
- * @param version
- * @param level
+ * @param version version of the symbol
+ * @param level error correction level
  * @param spec an array of ECC specification contains as following:
  * {# of type1 blocks, # of data code, # of ecc code,
  *  # of type2 blocks, # of data code}
@@ -126,7 +126,7 @@ void QRspec_getEccSpec(int version, QRecLevel level, int spec[5]);
 /**
  * Return BCH encoded version information pattern that is used for the symbol
  * of version 7 or greater. Use lower 18 bits.
- * @param version
+ * @param version version of the symbol
  * @return BCH encoded version information pattern
  */
 extern unsigned int QRspec_getVersionPattern(int version);
@@ -137,8 +137,8 @@ extern unsigned int QRspec_getVersionPattern(int version);
 
 /**
  * Return BCH encoded format information pattern.
- * @param mask
- * @param level
+ * @param mask mask number
+ * @param level error correction level
  * @return BCH encoded format information pattern
  */
 extern unsigned int QRspec_getFormatInfo(int mask, QRecLevel level);
@@ -149,7 +149,7 @@ extern unsigned int QRspec_getFormatInfo(int mask, QRecLevel level);
 
 /**
  * Return a copy of initialized frame.
- * @param version
+ * @param version version of the symbol
  * @return Array of unsigned char. You can free it by free().
  */
 extern unsigned char *QRspec_newFrame(int version);
