@@ -8,6 +8,8 @@
 	* qrenc.c:
 	  - X Pixmap (XPM) support has been added. (closes #52)
 	    (Thanks to @tklauser)
+	* qrspec.h, mqrspec.h:
+	  - empty descriptions of some @params are filled.
 	* Some code cleanups.
 
 2015.05.04 Kentaro Fukuchi <kentaro@fukuchi.org>
